fixed entire layout made it visually pleasing and placed back placeholder text for user visibility

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,80 @@
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.nav-bar-container {
+  display: block;
+  border: 1px solid red;
+  background-color: maroon;
+  border-bottom: yellow 5px solid;
+}
+
 h1 {
   display: flex;
   justify-content: center;
+  font-family: "PT serif";
+  color: yellow;
+  background-color: maroon;
 }
 
 .button-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  gap: 5%;
+  background-color: aliceblue;
 }
 
 button {
   display: flex;
   justify-content: center;
+  padding: 10px;
+  margin: 20px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.display-container {
+  display: flex;
+  justify-content: center;
+}
+
+.display-container > #input-area {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 5%;
+}
+
+input-area {
+  display: flex;
+  justify-content: center;
+  margin-top: 3%;
+}
+
+.footer {
+  text-align: center;
+  padding: 2em;
+  background-color: #f1f1f1;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.footer > a {
+  color: gray;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.footer > p {
+  font-size: 15px;
+  color: light black;
 }
